test/e2e/testdata/policy-status-cleanup-multiple-ancestors-same-gwc.yaml
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: BackendTrafficPolicy
metadata:
  name: backendtrafficpolicy-multiple-ancestors-same-gwc
  namespace: gateway-conformance-infra
spec:
  targetRefs:
  - group: gateway.networking.k8s.io
    kind: Gateway
    name: same-namespace
  - group: gateway.networking.k8s.io
    kind: Gateway
    name: all-namespaces
